--- a/3DSecure.html
+++ b/3DSecure.html
@@ -1,6 +1,8 @@
 <HTML>
 	<head>
 		<link rel="stylesheet" type="text/css" href="styles/style.css"/>
+		<link rel="stylesheet" type="text/css" href="styles/flowchart.css"/>
+		<title>3D Secure 1</title>
 	</head>
 	<body>
 		<div class="left-column">
@@ -9,6 +11,26 @@
 		</div>
 		
 		<div class="right-column fixed center-content">
+			<div class="flowchart-container">
+				<figure class="flowchart" style="padding-left: 33%">
+					<ul id="flowchart" class="tree"></ul>
+				</figure>
+				<div class="flowchart-legend center-content">
+					<div>
+						<label>Current state</label>
+						<span class="flowchart-color-swatch active-state-legend"></span>
+					</div>
+					<div>
+						<label>Previous state</label>
+						<span class="flowchart-color-swatch previous-state-legend"></span>
+					</div>
+					<div>
+						<label>Unreachable state</label>
+						<span class="flowchart-color-swatch unreachable-state-legend"></span>
+					</div>
+				</div>
+			</div>
+
 			<iframe class="threeDSIframe" id="threeDSIframe">
 				<div id="constructedFormHolder"/>
 			</iframe>
@@ -18,17 +40,19 @@
 					<div class="client-form">
 						<div class="block">
 							<input type="checkbox" id="threeds2inMDFlowCheckbox"/>
-							<label for="threeds2inMDFlow">Hosted 3ds2</label>
+							<label for="threeds2inMDFlowCheckbox">Hosted 3ds2</label>
 						</div>
 						<div class="block">
 							<input type="checkbox" id="standaloneCheckbox"/>
 							<label for="standaloneCheckbox">Standalone</label>
 						</div>
+						<div class="block">
+							<input type="checkbox" id="frictionlessCheckbox"/>
+							<label for="frictionlessCheckbox">Frictionless</label>
+						</div>
 						<div id="authoriseBtnHolder"></div>
 					</div>
 				</div>
-
-				<div id="sdkContainer" class="hidden challenge-iframe"></div>
 			</div>
 		</div>
 	</body>
@@ -37,6 +61,24 @@
 <script type="module">
 
 import * as common from "./scripts/common.js";
+import Flowchart from "./scripts/flowchart.js";
+
+// container for global variables
+const globals = {};
+
+// add dynamic flowchart
+let tree = [
+	"First /payments Call",
+	[
+		"Frictionless",
+		"3D Secure",
+		[
+			"Authorisation",
+			"Retrieve MPI Data"
+		]
+	]
+];
+globals.flowchart = new Flowchart(tree, document.querySelector("#flowchart"));
 
 // Add submit button to DOM
 const authoriseButton = document.createElement("button");
@@ -45,15 +87,23 @@ authoriseButton.innerHTML = "Authorise";
 authoriseButton.id = "authoriseBtn";
 document.querySelector("#authoriseBtnHolder").appendChild(authoriseButton);
 
-// Global variables
-const globals = {}
-
 // Start the transaction
 function initialAuthorise() {
 	globals.authenticationOnly = document.querySelector("#standaloneCheckbox").checked
 
+	globals.flowchart.setActive("First/paymentsCall")
+
 	// hide checkout form
 	common.hide(".checkout-holder");
+
+	// frictionless
+	let requestAmount = 0;
+	if (document.querySelector("#frictionlessCheckbox").checked) {
+		requestAmount = 12002;
+	}
+	else {
+		requestAmount = 1000;
+	}
 
 	const request = {
 		"reference": "Localhost 3DS 1",
@@ -69,7 +119,7 @@ function initialAuthorise() {
 			"cvc": "737"
 		},
 		"amount": {
-			"value": "2000",
+			"value": requestAmount,
 			"currency": "USD"
 		},
 		"browserInfo": {
@@ -120,16 +170,43 @@ function initialAuthoriseCallback(data) {
 	document.querySelector("#threeDSIframe").contentWindow.document.documentElement.appendChild(form);
 	form.submit();
 
+	globals.flowchart.setActive("3DSecure");
+
 	window.addEventListener("message", handlePostMessage);
 }
 
-// gets response from server
+// gets redirect response from server
 function handlePostMessage(e) {
 	common.hide("#threeDSIframe");
+	common.output(e.data, "Data in redirect from issuer");
 
-	common.output(e.data.redirectData, "Data in redirect from issuer");
-	common.output(e.data.request, "Request to /authorise3d", e.data.endpoint);
-	common.output(e.data.response, "Response from Adyen");
+	const request = {
+		"md": e.data.MD[0],
+		"paResponse": e.data.PaRes[0],
+		"merchantAccount": e.data.merchantAccount
+	}
+
+	if (globals.authenticationOnly) {
+		request.threeDS2RequestData = {
+			"authenticationOnly": "true"
+		}
+	}
+
+	request.endpoint = common.endpoints.authorise3d;
+
+	common.AJAXPost(common.SERVER_URL, postRedirectCallback, request);
+}
+
+function postRedirectCallback(data) {
+	common.output(data.request, "Request to /authorise3d", data.endpoint);
+	common.output(data.response, "Response from Adyen");
+
+	if (data.response.resultCode === "AuthenticationFinished") {
+		globals.flowchart.setActive("RetrieveMPIData");
+	}
+	else {
+		globals.flowchart.setActive("Authorisation");
+	}
 }
 
 </script>
