switch components to 2 column layout, update 3ds2 component to 2.5.0

--- a/3DSecure2Basic.html
+++ b/3DSecure2Basic.html
@@ -12,7 +12,7 @@
 		<div id="output"></div>
 	</div>
 	
-	<div class="right-column fixed">
+	<div class="right-column">
 		<div class="flowchart-container">
 			<figure class="flowchart">
 				<ul id="flowchart" class="tree"></ul>
