--- a/3DSecure.html
+++ b/3DSecure.html
@@ -113,8 +113,9 @@ function initialAuthorise() {
 	const request = {
 		"reference": "Localhost 3DS 1",
 		"threeDS2RequestData": {
-			"authenticationOnly": globals.authenticationOnly
+			"authenticationOnly": globals.authenticationOnly.toString()
 		},
+		"channel": "web",
 		"paymentMethod": {
 			"holderName": "Test Shopper",
 			"number": cardNumber,
@@ -128,14 +129,13 @@ function initialAuthorise() {
 			"currency": "USD"
 		},
 		"browserInfo": {
-			"userAgent": "Mozilla/5.0 (Macintosh",
-			"acceptheader": "text/html"
+			"userAgent": window.navigator.userAgent
 		},
 		"merchantAccount": "ColinRood",
 		"returnUrl": "http://localhost:8000/cgi-bin/submit.py?endpoint=threeds1_notification_url",
 		"additionalData": {
 			"executeThreeD": "true",
-			"threeDS2InMDFlow": document.querySelector("#threeds2inMDFlowCheckbox").checked
+			"threeDS2InMDFlow": document.querySelector("#threeds2inMDFlowCheckbox").checked.toString()
 		}
 	}
 
