--- a/components.html
+++ b/components.html
@@ -9,27 +9,29 @@
 
 <body>
 
-	<h3>Payment info</h3>
-	<div class="block">
-		<form id="paymentForm" class="client-form" >
-			Value: <input type="text" class="payment-data" name="value" value="1500"/><br>
-			Currency: <input type="text" class="payment-data" name="currency" value="EUR"/><br>
-			CountryCode: <input type="text" class="payment-data" name="countryCode" value="NL"/><br>
-			ShopperLocale: <input type="text" class="payment-data" name="shopperLocale" value="en_GB"/><br>
-			Reference: <input type="text" class="payment-data" name="reference" value="Localhost Components"/><br>
-			<button id="checkoutBtn" class="block">Initialize</button>
-		</form>
+	<div class="left-column">
+		<h2>Network activity</h2>
+		<div id="output"></div>
 	</div>
 
-	<div id="componentHolder" class="component display-none"></div>
-	<div id="cardComponentHolder" class="component display-none"></div>
-	<div id="sepaComponentHolder" class="component display-none"></div>
-	<div id="genericComponentHolder" class="component"></div>
-	<br>
-	<button id="payBtn" class="hidden" disabled=true>Pay</button>
+	<div class="right-column">
+		<h3>Payment info</h3>
+		<div class="block">
+			<form id="paymentForm" class="client-form" >
+				Currency: <input type="text" id="currencyInput" name="currency" value="EUR"/><br>
+				CountryCode: <input type="text" id="countryCodeInput" name="countryCode" value="NL"/><br>
+				ShopperLocale: <input type="text" id="shopperLocaleInput" name="shopperLocale" value="en_GB"/><br>
+				<button id="checkoutBtn" class="block">Initialize</button>
+			</form>
+		</div>
+
+		<div id="componentHolder" class="component display-none"></div>
+		<br>
+		<button id="payBtn" class="hidden" disabled=true>Pay</button>
+	</div>
 
 
-	<div id="output"></div>
+
 </body>
 
 <script type="module">
@@ -55,11 +57,27 @@ function getAvailablePaymentMethods(e) {
 	e.preventDefault();
 
 	common.hide("#paymentForm");
-	common.AJAXPost(common.buildFormURL({ endpoint: "checkout_payment_methods" }), handlePaymentMethodsCallback);
+
+	const request = {
+		currency: document.querySelector("#currencyInput").value,
+		shopperLocale: document.querySelector("#shopperLocaleInput").value,
+		countryCode: document.querySelector("#countryCodeInput").value,
+		merchantAccount: "" // filled in by server
+	}
+	request.endpoint = common.endpoints.paymentMethods;
+
+	common.AJAXPost(
+		common.SERVER_URL,
+		handlePaymentMethodsCallback,
+		request
+	);
 }
 
 // display available components
-function handlePaymentMethodsCallback(response) {
+function handlePaymentMethodsCallback(data) {
+
+	common.output(data.request, "/paymentMethods request", data.endpoint)
+	common.output(data.response, "/paymentMethods response");
 
 	// config options shared between components
 	const sharedConfiguration = {
@@ -71,38 +89,44 @@ function handlePaymentMethodsCallback(response) {
 	// show disabled pay button
 	globals.payBtn.classList.remove("hidden");
 
+	// show components
+	common.unhide("#componentHolder");
+
 	// intialize checkout object
 	const checkout = new AdyenCheckout(sharedConfiguration);
 
 	// iterate through returned payment methods
 	// and render components where available
-	for (let pm of response.paymentMethods) {
+	for (let pm of data.response.paymentMethods) {
 		
-		// cards
-		if (pm.type === "scheme") {
-			const card = checkout.create("card", {
-			    onChange: handleStateChange
-			    // onValid also works here
-			}).mount("#cardComponentHolder");
-			common.unhide("#cardComponentHolder");
+		console.log("adding component for " + pm.type);
+		let pmType = pm.type;
+
+		// special case for cards
+		if (pmType === "scheme") {
+			pmType = "card";
 		}
 
-		// SEPA
-		else if (pm.type === "sepadirectdebit") {
-			const sepa = checkout.create("sepadirectdebit", {
-				onChange: handleStateChange
-			}).mount("#sepaComponentHolder");
-			common.unhide("#sepaComponentHolder");
+		// methods which don't have a component yet will throw an error
+		const componentDiv = document.createElement("div");
+		try {
+
+			// create new div for each component
+			componentDiv.innerHTML = pmType + "<hr>";
+			componentDiv.classList.add("component");
+			componentDiv.id = "component--" + pmType;
+			document.querySelector("#componentHolder").appendChild(componentDiv);
+
+			// initialize component
+			checkout.create(pmType, {
+				onChange: handleStateChange,
+				details: pm.details,
+			}).mount("#" + componentDiv.id);
+
 		}
-		else {
-			try {
-				checkout.create(pm.type, {
-					onChange: handleStateChange
-				}).mount("#genericComponentHolder");
-			}
-			catch {
-				console.log("invalid pm type: " + pm.type);
-			}
+		catch(e) {
+			componentDiv.remove();
+			console.log(e.message);
 		}
 	}
 }
@@ -112,6 +136,10 @@ function handleStateChange(state, component) {
 	globals.payBtn.disabled = !state.isValid;
 
 	globals.activePaymentInfo = state.data;
+
+	if (state.isValid) {
+		common.output(globals.activePaymentInfo, "onChange callback");
+	}
 }
 
 // send payment info to Adyen
@@ -133,7 +161,8 @@ function sendPayment() {
 
 // display result of call to Adyen
 function handlePaymentsCallback(data) {
-	common.output(data);
+	common.output(data.request, "/payments request", data.endpoint);
+	common.output(data.response, "/payments response");
 }
 
 </script>
