update components to 3.0.0, some API updates

--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -88,6 +88,15 @@ const setupCallback = function(data) {
 		}
 	};
 
+	// showProcessingAnimation	
+	chckt.hooks.showProcessingAnimation = function(actionButton) {
+	  actionButton.innerText = 'Edited text'
+	  actionButton.style['background-color'] = '#22A';
+	  debugger;
+	  return false;
+	};
+
+
 	// Validation
 	chckt.onAllValid = function(data) {
 		console.log("onAllValid");
