--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<a class="index-link" href="3DSecure2AdvancedCustomSDK.html">3D Secure 2 - Pre-fetch</a><br>
 
 	<h3 class="index-header">Checkout</h3>
+	<a class="index-link" href="dropinComponent.html">Drop-in Component</a><br>
 	<a class="index-link" href="checkout.html">Checkout SDK</a><br>
 	<a class="index-link" href="SecuredFieldsSDK.html">Secured Fields - SDK</a><br>
 	<a class="index-link" href="SecuredFieldsDirect.html">Secured Fields - Direct</a><br>
