--- a/3DSecure.html
+++ b/3DSecure.html
@@ -112,9 +112,7 @@ function initialAuthorise() {
 	// server request
 	const request = {
 		"reference": "Localhost 3DS 1",
-		"threeDS2RequestData": {
-			"authenticationOnly": globals.authenticationOnly.toString()
-		},
+		"threeDSAuthenticationOnly": globals.authenticationOnly.toString(),
 		"channel": "web",
 		"paymentMethod": {
 			"holderName": "Test Shopper",
@@ -133,6 +131,7 @@ function initialAuthorise() {
 		},
 		"merchantAccount": "ColinRood",
 		"returnUrl": "http://localhost:8000/cgi-bin/submit.py?endpoint=threeds1_notification_url",
+		"origin": "http://localhost:8000",
 		"additionalData": {
 			"executeThreeD": "true",
 			"threeDS2InMDFlow": document.querySelector("#threeds2inMDFlowCheckbox").checked.toString()
