--- a/dropinComponent.html
+++ b/dropinComponent.html
@@ -2,9 +2,9 @@
 
 <head>
 	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/3.0.0/adyen.js"></script>
-	<link rel="stylesheet" href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/2.1.0/adyen.css" />
+	<link rel="stylesheet" href="https://checkoutshopper-test.adyen.com/checkoutshopper/sdk/3.0.0/adyen.css"/>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
-	<title>Components</title>
+	<title>Drop-in Component</title>
 </head>
 
 <body>
@@ -18,19 +18,18 @@
 		<h3>Payment info</h3>
 		<div class="block">
 			<form id="paymentForm" class="client-form" >
-				Currency: <input type="text" id="currencyInput" name="currency" value="EUR"/><br>
-				CountryCode: <input type="text" id="countryCodeInput" name="countryCode" value="NL"/><br>
+				Currency: <input type="text" id="currencyInput" name="currency" value="USD"/><br>
+				CountryCode: <input type="text" id="countryCodeInput" name="countryCode" value="US"/><br>
 				ShopperLocale: <input type="text" id="shopperLocaleInput" name="shopperLocale" value="en_GB"/><br>
 				<button id="checkoutBtn" class="block">Initialize</button>
 			</form>
 		</div>
 
-		<div id="componentHolder" class="component display-none"></div>
+		<div id="componentHolder" class=""></div>
+		<div id="redirectIframe"></div>
 		<br>
 		<button id="payBtn" class="hidden" disabled=true>Pay</button>
 	</div>
-
-
 
 </body>
 
@@ -42,14 +41,21 @@ const ORIGIN_KEY = "pub.v2.8115054323780109.aHR0cDovL2xvY2FsaG9zdDo4MDAw.B92basP
 
 const globals = {};
 
+globals.componentInitializerOutput = `const sharedConfiguration = {
+    locale: document.querySelector("[name=shopperLocale]").value,
+    originKey: ORIGIN_KEY,
+    environment: "test",
+    paymentMethodsResponse: data.response
+};
+
+// intialize checkout object
+const checkout = new AdyenCheckout(sharedConfiguration);`
+
 // actions to do on page load
 window.onload = function() {
 
 	// event listener for initialize button
 	document.getElementById("checkoutBtn").addEventListener("click", getAvailablePaymentMethods);
-
-	globals.payBtn = document.querySelector("#payBtn");
-	globals.payBtn.onclick = sendPayment;
 };
 
 // get data from form and make call to paymentMethods
@@ -83,77 +89,52 @@ function handlePaymentMethodsCallback(data) {
 	const sharedConfiguration = {
 	    locale: document.querySelector("[name=shopperLocale]").value,
 	    originKey: ORIGIN_KEY,
-	    loadingContext: "https://checkoutshopper-test.adyen.com/checkoutshopper/",
-	    environment: "test"
+	    environment: "test",
+	    paymentMethodsResponse: data.response
 	};
-
-	// show disabled pay button
-	globals.payBtn.classList.remove("hidden");
-
-	// show components
-	common.unhide("#componentHolder");
 
 	// intialize checkout object
 	const checkout = new AdyenCheckout(sharedConfiguration);
 
-	// iterate through returned payment methods
-	// and render components where available
-	for (let pm of data.response.paymentMethods) {
-		
-		console.log("adding component for " + pm.type);
-		let pmType = pm.type;
+	common.output(globals.componentInitializerOutput, "Initialize Dropin Component")
 
-		// special case for cards
-		if (pmType === "scheme") {
-			pmType = "card";
-		}
+	// initialize dropin component
+	globals.dropin = checkout.create("dropin", {
+		paymentMethodsConfiguration: {
 
-		// methods which don't have a component yet will throw an error
-		const componentDiv = document.createElement("div");
-		try {
-
-			// create new div for each component
-			componentDiv.innerHTML = pmType + "<hr>";
-			componentDiv.classList.add("component");
-			componentDiv.id = "component--" + pmType;
-			document.querySelector("#componentHolder").appendChild(componentDiv);
-
-			// initialize component
-			checkout.create(pmType, {
-				onChange: handleStateChange,
-				details: pm.details,
-			}).mount("#" + componentDiv.id);
-
-		}
-		catch(e) {
-			componentDiv.remove();
-			console.log(e.message);
-		}
-	}
+		},
+		onSubmit: onSubmit,
+		onAdditionalDetails: onAdditionalDetails
+	})
+	.mount("#componentHolder");
 }
 
-// handle changes in component state
-function handleStateChange(state, component) {
-	globals.payBtn.disabled = !state.isValid;
+function onSubmit(state, dropin) {
+	console.log("onSubmit");
+	console.log(state);
+	console.log(dropin);
 
-	globals.activePaymentInfo = state.data;
+	sendPayment(state.data);
+}
 
-	if (state.isValid) {
-		common.output(globals.activePaymentInfo, "onChange callback");
-	}
+function onAdditionalDetails(state, dropin) {
+	console.log("onAdditionalDetails");
+	console.log(state);
+	console.log(dropin);
 }
 
 // send payment info to Adyen
-function sendPayment() {
+function sendPayment(stateData) {
 	const formData = common.getJSONFromFormData("#paymentForm");
 	const request = {
 		"merchantAccount":"",
-		"reference":"Localhost components",
+		"reference":"Localhost drop-in component",
 		"amount":{
 			"currency": formData.currency,
 			"value": formData.value
 		},
-		"paymentMethod": globals.activePaymentInfo
+		"paymentMethod": stateData.paymentMethod,
+		"returnUrl": common.RETURN_URL
 	};
 	request.endpoint = common.endpoints.payments;
 
@@ -164,6 +145,20 @@ function sendPayment() {
 function handlePaymentsCallback(data) {
 	common.output(data.request, "/payments request", data.endpoint);
 	common.output(data.response, "/payments response");
+
+	// handle redirects
+	if (data.response.resultCode === "RedirectShopper") {
+
+		// remove drop-in component
+		globals.dropin.unmount();
+
+		// create an iframe and redirect it
+		const iframe = document.createElement("iframe");
+		iframe.style.width = "100%";
+		iframe.style.height = "500px";
+		document.querySelector("#redirectIframe").appendChild(iframe);
+		iframe.contentWindow.location = data.response.redirect.url;
+	}
 }
 
 </script>
