--- a/checkout_iframe.html
+++ b/checkout_iframe.html
@@ -1,5 +1,5 @@
 <head>
-	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSDK.1.3.2.min.js"></script>
+	<script type="text/javascript" src="https://checkoutshopper-test.adyen.com/checkoutshopper/assets/js/sdk/checkoutSDK.1.9.9.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"></link>
 </head>
 
@@ -60,7 +60,7 @@ const sdkConfigObj = {
 			sfStyles: styleObject
 		}
 	},
-	showOptionalHolderNameField: "false",
+	showOptionalHolderNameField: true,
 	translations: translationObject,
 	useDefaultCSS: "false"
 };
